# skseal

./: SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: HARDWARE_TOKENS.md
research/: ARCHITECTURE_COMPARISON.md  DOCUSEA L_TEMPLATE_BUILDER_ANALYSIS.md  RESEARCH.md  docuseal-deploy.sh
scripts/: mcp-serve.sh
src/skseal/: __init__.py  api.py  cli.py  engine.py  mcp_server.py  models.py  models_timestamp.py  pkcs11.py  store.py  timestamp.py
src/skseal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: nda.json  operating-agreement.json  pma-membership.json  service-agreement.json  trust-declaration.json
tests/: conftest.py  test_engine.py  test_models.py  test_pkcs11.py  test_store.py  test_timestamp.py
web/: package.json  tsconfig.json
web/src/: client.ts  crypto.ts  index.ts  keystore.ts  signing-session.ts  types.ts
web/src/components/: SigningView.vue  TemplateBuilder.vue
