[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skseal"
version = "0.1.0"
description = "Sovereign document signing — PGP-backed, legally binding, no middleman."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "smilinTux.org", email = "hello@smilintux.org"},
]
dependencies = [
    "pydantic>=2.0",
    "pgpy>=0.6",
    "pypdf>=4.0",
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
pkcs11 = [
    "PyKCS11>=1.5.12",
]
timestamp = [
    "rfc3161ng>=2.1",
    "asn1crypto>=1.5",
]
all = [
    "PyKCS11>=1.5.12",
    "rfc3161ng>=2.1",
    "asn1crypto>=1.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "black>=24.0",
]

[project.scripts]
skseal = "skseal.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]
